--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
         <maven.test.skip>true</maven.test.skip>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <mainClass>ru.md24inc.alembic.pervoc.gui.MainWindow</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.jdom</groupId>
